# backlog-atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  MAINTAINERS.md  PRODUCT-STRATEGY.md  README.md  STANDALONE-TODO.md  USER-GUIDE.md  atlas.json  backlog.json  last_snapshot.json  pyproject.toml  updates.jsonl
.awd/: functions.json
.github/: backlog-atlas.json
.github/backlog-atlas/: atlas.yaml  manifest.json
.github/workflows/: publish.yml  temporary-backlog-atlas-upgrade-cleanup.yml  update-backlog-atlas.yml
backlog_atlas/: __init__.py  config.py  config.yaml  core.py  errors.py
backlog_atlas/install/: __init__.py  artifacts.py  cli.py  commands.py  constants.py  github.py  local.py  models.py  repo.py  sources.py
backlog_atlas/templates/: uninstall_workflow.yml  uninstall_workflow.yml.tmpl  upgrade_cleanup_workflow.yml  workflow.yml  workflow.yml.tmpl
backlog_atlas/web/: index.html
tests/: test_publish_version.py  test_update_backlog.py
tools/: publish_version.py
