[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-atlas"
version = "0.11"
description = "Generate a self-hosted backlog snapshot and dashboard for maintainers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "build",
    "mypy>=1.8",
    "pyflakes>=3",
    "pytest",
]

[project.scripts]
backlog-atlas = "backlog_atlas.core:main"

[tool.setuptools.packages.find]
include = ["backlog_atlas*"]
namespaces = true

[tool.setuptools.package-data]
backlog_atlas = [
    "config.yaml",
    "templates/*.yml",
    "web/*",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["backlog_atlas", "tests"]
python_version = "3.10"
warn_unused_configs = true
