[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-atlas"
version = "0.14"
description = "Generate a self-hosted backlog snapshot and dashboard for maintainers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "build",
    "mypy>=1.8",
    "pyflakes>=3",
    "pytest",
]

[project.scripts]
backlog-atlas = "backlog_atlas.core:main"

[tool.setuptools.packages.find]
include = ["backlog_atlas*"]
namespaces = true

[tool.setuptools.package-data]
backlog_atlas = [
    "config.yaml",
    "templates/*.yml",
    "web/*",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["backlog_atlas", "tests", "tools"]
python_version = "3.10"
warn_unused_configs = true
